[FEATURE] Add composer support
Also add license file and update version information
and dependencies.

Resolves: #75891
Releases: 2.0
Change-Id: Ifdc2c56440b80e5b206cf3780408be9deb6e59b6
Reviewed-on: https://review.typo3.org/47881
Reviewed-by: Francois Suter <francois@typo3.org>
Tested-by: Francois Suter <francois@typo3.org>

--- a/Documentation/Settings.yml
+++ b/Documentation/Settings.yml
@@ -4,8 +4,8 @@
 
 ---
 conf.py:
-  copyright: 2002-2015
+  copyright: 2008-2016
   project: Fluid-based Data Consumer
-  version: 2.0.0
-  release: 2.0.0-dev
+  version: 2.0
+  release: 2.0.0
 ...
